# otus_c_plus_hw12

./: .gitignore
.github/workflows/: run_hw12.yml
hm12/: CMakeLists.txt  CMakePresets.json  main.cpp  test.txt  uniq_test.txt
hm12/src/: MapReduce.cpp  MapReduce.hpp  Utils.hpp
